--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 28 19:41:04 ICT 2024
-sdk.dir=C\:\\Users\\humay\\AppData\\Local\\Android\\Sdk
+#Thu Nov 28 20:04:13 WIB 2024
+sdk.dir=C\:\\Users\\win 10\\AppData\\Local\\Android\\Sdk
