--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,12 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PintarPlus"
         tools:targetApi="31">
+
         <activity
-<<<<<<< Updated upstream
             android:name=".PrimaryActivity"
-=======
+            android:exported="false" />
+        <activity
             android:name=".MatpelActivity"
->>>>>>> Stashed changes
             android:exported="false" />
         <activity
             android:name=".SecondaryActivity"
@@ -25,18 +28,18 @@
         <activity
             android:name=".FirstScreenPintarPlus"
             android:exported="false" />
-        <activity
-            android:name=".TestActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".TestActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
