--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Nov 29 09:51:08 ICT 2024
-sdk.dir=C\:\\Users\\humay\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\win 10\\AppData\\Local\\Android\\Sdk
