--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,9 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Dec 19 17:37:33 ICT 2024
-sdk.dir=C\:\\Users\\humay\\AppData\\Local\\Android\\Sdk
+
+#sdk yuma
+#sdk.dir=C\:\\Users\\humay\\AppData\\Local\\Android\\Sdk
+
+#sdk asep
+sdk.dir=C\:\\Users\\win 10\\AppData\\Local\\Android\\Sdk
