--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -8,18 +9,19 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PintarPlus"
         tools:targetApi="31">
-
+        <activity
+            android:name=".VideoMatpelActivity"
+            android:exported="false" />
         <activity
             android:name=".ElementaryActivity"
             android:exported="true" />
-
         <activity
             android:name=".FirstScreenPintarPlus"
             android:exported="true">
@@ -29,38 +31,30 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".GradeActivity"
             android:exported="true" />
-
         <activity
             android:name=".NotificationActivity"
             android:exported="true" />
-
         <activity
             android:name=".SignUpActivity"
             android:exported="true" />
-
         <activity
             android:name=".LoginActivity"
             android:exported="true" />
-
         <activity
             android:name=".PrimaryActivity"
             android:exported="false" />
-
         <activity
             android:name=".MatpelActivity"
             android:exported="false" />
-
         <activity
             android:name=".SecondaryActivity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true" />
-
     </application>
+
 </manifest>
