--- a/local.properties
+++ b/local.properties
@@ -7,7 +7,7 @@
 #Thu Dec 19 17:37:33 ICT 2024
 
 #sdk yuma
-sdk.dir=C\:\\Users\\humay\\AppData\\Local\\Android\\Sdk
+#sdk.dir=C\:\\Users\\humay\\AppData\\Local\\Android\\Sdk
 
 #sdk asep
-#sdk.dir=C\:\\Users\\win 10\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\win 10\\AppData\\Local\\Android\\Sdk
